# rag-benchmarking

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GITHUB_SETTINGS.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/golden/: qa.jsonl
data/sample/: guide.md
scripts/: evaluate.py
src/app/: exceptions.py  main.py
src/app/api/: evaluate.py  query.py  security.py
src/app/config/: settings.py
src/app/engine/: rag_engine.py
src/app/eval/: ragas_runner.py  reporting.py
src/app/llm/: client.py
src/app/logging/: json_logger.py
src/app/quality/: self_check.py
src/app/retrieval/: chunking.py  embeddings.py  ingest_cli.py  qdrant_store.py  reranker.py  service.py
src/app/utils/: timing.py
tests/: test_chunking.py  test_config_and_logging.py  test_embeddings.py  test_evaluate_api.py  test_health.py  test_query_api.py  test_rerank_integration.py  test_security.py
